Fix ads covering fork link on smaller screens.

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ ol li .type {
 }
 section.ads {
   position: fixed;
-  top: calc(50% - 330px);
+  bottom: 0;
   right: 0;
   padding: 2px 6px 2px 10px;
   background-color: #F8F8F8;
